--- a/2013Weather.ipynb
+++ b/2013Weather.ipynb
@@ -501,6 +501,198 @@
           "execution_count": 27
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iZICBByxx23-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 391
+        },
+        "outputId": "fe83b779-bf09-4d62-af2e-1db49ec1bc47"
+      },
+      "source": [
+        "dfweather_data = weather_data[['STATE','DAMAGE_PROPERTY']].copy()\n",
+        "dfweather_data"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>STATE</th>\n",
+              "      <th>DAMAGE_PROPERTY</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>ALABAMA</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>COLORADO</td>\n",
+              "      <td>0.00K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>CALIFORNIA</td>\n",
+              "      <td>0.00K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>WYOMING</td>\n",
+              "      <td>0.00K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>SOUTH DAKOTA</td>\n",
+              "      <td>0.00K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>51927</th>\n",
+              "      <td>INDIANA</td>\n",
+              "      <td>4.00K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>51928</th>\n",
+              "      <td>INDIANA</td>\n",
+              "      <td>1.00K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>51929</th>\n",
+              "      <td>INDIANA</td>\n",
+              "      <td>10.00K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>51930</th>\n",
+              "      <td>INDIANA</td>\n",
+              "      <td>0.50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>51931</th>\n",
+              "      <td>INDIANA</td>\n",
+              "      <td>1.50K</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>51932 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "              STATE DAMAGE_PROPERTY\n",
+              "0           ALABAMA             NaN\n",
+              "1          COLORADO           0.00K\n",
+              "2        CALIFORNIA           0.00K\n",
+              "3           WYOMING           0.00K\n",
+              "4      SOUTH DAKOTA           0.00K\n",
+              "...             ...             ...\n",
+              "51927       INDIANA           4.00K\n",
+              "51928       INDIANA           1.00K\n",
+              "51929       INDIANA          10.00K\n",
+              "51930       INDIANA           0.50K\n",
+              "51931       INDIANA           1.50K\n",
+              "\n",
+              "[51932 rows x 2 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qREC2Mc2zEjR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 66
+        },
+        "outputId": "62b11d09-5eb5-470d-dd8b-3a8449ca2510"
+      },
+      "source": [
+        "dfweather_data.isnull().sum().sort_values()"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "STATE                 0\n",
+              "DAMAGE_PROPERTY    7751\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DEVqg0i2zjcZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 66
+        },
+        "outputId": "f1064190-c6aa-441d-b9e9-cd917d6bb5b4"
+      },
+      "source": [
+        "dfweather_data.dtypes"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "STATE              object\n",
+              "DAMAGE_PROPERTY    object\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
     }
   ]
 }
