--- a/2013Weather.ipynb
+++ b/2013Weather.ipynb
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "dDpKN2POGePj",
         "colab_type": "code",
-        "outputId": "425ca873-9226-4c6c-c3d7-1c7e2685f1f9",
+        "outputId": "d9cfeda1-057f-41fa-a22e-6c40958f9f40",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 33
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "SoTomj0BGu5C",
         "colab_type": "code",
-        "outputId": "14312a3e-3ed2-47bd-8e4c-9bc377c9c237",
+        "outputId": "c37def5e-712a-4d0b-b7fb-3393b8ed8c3e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 438
@@ -90,7 +90,7 @@
       "source": [
         "weather_data.tail()"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -498,7 +498,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 5
         }
       ]
     },
@@ -511,13 +511,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 391
         },
-        "outputId": "fe83b779-bf09-4d62-af2e-1db49ec1bc47"
+        "outputId": "2d8fe2ad-5af0-4f2c-f897-0dab3822b6de"
       },
       "source": [
         "dfweather_data = weather_data[['STATE','DAMAGE_PROPERTY']].copy()\n",
         "dfweather_data"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,7 +626,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -639,12 +639,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 66
         },
-        "outputId": "62b11d09-5eb5-470d-dd8b-3a8449ca2510"
+        "outputId": "e05135d6-a5a2-4a71-8bef-392a0ff2ca1a"
       },
       "source": [
         "dfweather_data.isnull().sum().sort_values()"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -658,7 +658,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -671,12 +671,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 66
         },
-        "outputId": "f1064190-c6aa-441d-b9e9-cd917d6bb5b4"
+        "outputId": "1a8f7b53-503f-44cc-ac8c-ce24e0321bee"
       },
       "source": [
         "dfweather_data.dtypes"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -690,7 +690,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -711,15 +711,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0mNZ8rJI6J7y",
+        "id": "dbE6cnyZBk8N",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 66
+        },
+        "outputId": "8ed5c61c-f6df-47f3-fae6-7903019e4d57"
       },
       "source": [
-        "test_strip = '4.00K'"
+        "dfweather_data.isnull().sum().sort_values()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "STATE              0\n",
+              "DAMAGE_PROPERTY    0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -730,70 +749,10 @@
       },
       "source": [
         "def object_to_float(cell_contents):\n",
-        "  return float(cell_contents.strip('K'))"
+        "  return float(cell_contents.strip('M').strip('K'))"
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jZePNdda51sV",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 33
-        },
-        "outputId": "b7eb754f-dba2-4df8-d9c1-29a915a9c64d"
-      },
-      "source": [
-        "object_to_float(test_strip)"
-      ],
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "4.0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 27
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9XZAI6iB6YdU",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 33
-        },
-        "outputId": "78fcfe45-72e6-4056-f720-1c67fede85ca"
-      },
-      "source": [
-        "type(test_strip)"
-      ],
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "str"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 28
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -804,26 +763,26 @@
           "base_uri": "https://localhost:8080/",
           "height": 296
         },
-        "outputId": "f1941e97-70f9-4ef9-eace-4f5b6806998d"
+        "outputId": "19276c9d-3e5d-4498-95d9-3de93288b561"
       },
       "source": [
         "dfweather_data['DAMAGE_PROPERTY_K'] = dfweather_data['DAMAGE_PROPERTY'].apply(object_to_float)\n",
         "df.head()"
       ],
-      "execution_count": 29,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "AttributeError",
+          "ename": "ValueError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-29-b203e4c1e497>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdfweather_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'DAMAGE_PROPERTY_K'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdfweather_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'DAMAGE_PROPERTY'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject_to_float\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-35-b203e4c1e497>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdfweather_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'DAMAGE_PROPERTY_K'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdfweather_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'DAMAGE_PROPERTY'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject_to_float\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/series.py\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, func, convert_dtype, args, **kwds)\u001b[0m\n\u001b[1;32m   4043\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4044\u001b[0m                 \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4045\u001b[0;31m                 \u001b[0mmapped\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap_infer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconvert_dtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4046\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4047\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSeries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32mpandas/_libs/lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.map_infer\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-26-11c403afc9cd>\u001b[0m in \u001b[0;36mobject_to_float\u001b[0;34m(cell_contents)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mobject_to_float\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcell_contents\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcell_contents\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'K'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'float' object has no attribute 'strip'"
+            "\u001b[0;32m<ipython-input-34-a7c966942b8b>\u001b[0m in \u001b[0;36mobject_to_float\u001b[0;34m(cell_contents)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mobject_to_float\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcell_contents\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcell_contents\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'M'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'K'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: could not convert string to float: '2.00B'"
           ]
         }
       ]
