--- a/2013Weather.ipynb
+++ b/2013Weather.ipynb
@@ -511,13 +511,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 391
         },
-        "outputId": "2d8fe2ad-5af0-4f2c-f897-0dab3822b6de"
+        "outputId": "8fb23229-8fdf-4453-d4f4-c18fd7acb31c"
       },
       "source": [
         "dfweather_data = weather_data[['STATE','DAMAGE_PROPERTY']].copy()\n",
         "dfweather_data"
       ],
-      "execution_count": 7,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,7 +626,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 15
         }
       ]
     },
@@ -639,12 +639,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 66
         },
-        "outputId": "e05135d6-a5a2-4a71-8bef-392a0ff2ca1a"
+        "outputId": "4387dc1e-44a1-4de9-b03a-a0dd8f38bcb5"
       },
       "source": [
         "dfweather_data.isnull().sum().sort_values()"
       ],
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -658,7 +658,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 16
         }
       ]
     },
@@ -671,12 +671,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 66
         },
-        "outputId": "1a8f7b53-503f-44cc-ac8c-ce24e0321bee"
+        "outputId": "57f1b850-2382-4f9d-9fca-a243650343ff"
       },
       "source": [
         "dfweather_data.dtypes"
       ],
-      "execution_count": 9,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -690,7 +690,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 17
         }
       ]
     },
@@ -717,12 +717,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 66
         },
-        "outputId": "8ed5c61c-f6df-47f3-fae6-7903019e4d57"
+        "outputId": "9809c698-dec7-4bdc-a476-6589eab5e244"
       },
       "source": [
         "dfweather_data.isnull().sum().sort_values()"
       ],
-      "execution_count": 11,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +736,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 19
         }
       ]
     },
@@ -749,7 +749,7 @@
       },
       "source": [
         "def object_to_float(cell_contents):\n",
-        "  return float(cell_contents.strip('M').strip('K'))"
+        "  return float(cell_contents.strip('M').strip('B').strip('K'))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -761,29 +761,103 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 296
+          "height": 288
         },
-        "outputId": "19276c9d-3e5d-4498-95d9-3de93288b561"
+        "outputId": "1f8238d7-0647-4027-b2f4-f1730a8f5664"
       },
       "source": [
         "dfweather_data['DAMAGE_PROPERTY_K'] = dfweather_data['DAMAGE_PROPERTY'].apply(object_to_float)\n",
-        "df.head()"
+        "dfweather_data.head()"
       ],
-      "execution_count": 35,
+      "execution_count": 22,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-35-b203e4c1e497>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdfweather_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'DAMAGE_PROPERTY_K'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdfweather_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'DAMAGE_PROPERTY'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject_to_float\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/series.py\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, func, convert_dtype, args, **kwds)\u001b[0m\n\u001b[1;32m   4043\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4044\u001b[0m                 \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4045\u001b[0;31m                 \u001b[0mmapped\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap_infer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconvert_dtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4046\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4047\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSeries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.map_infer\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-34-a7c966942b8b>\u001b[0m in \u001b[0;36mobject_to_float\u001b[0;34m(cell_contents)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mobject_to_float\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcell_contents\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcell_contents\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'M'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'K'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m: could not convert string to float: '2.00B'"
-          ]
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \"\"\"Entry point for launching an IPython kernel.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>STATE</th>\n",
+              "      <th>DAMAGE_PROPERTY</th>\n",
+              "      <th>DAMAGE_PROPERTY_K</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>COLORADO</td>\n",
+              "      <td>0.00K</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>CALIFORNIA</td>\n",
+              "      <td>0.00K</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>WYOMING</td>\n",
+              "      <td>0.00K</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>SOUTH DAKOTA</td>\n",
+              "      <td>0.00K</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>COLORADO</td>\n",
+              "      <td>0.00K</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          STATE DAMAGE_PROPERTY  DAMAGE_PROPERTY_K\n",
+              "1      COLORADO           0.00K                0.0\n",
+              "2    CALIFORNIA           0.00K                0.0\n",
+              "3       WYOMING           0.00K                0.0\n",
+              "4  SOUTH DAKOTA           0.00K                0.0\n",
+              "5      COLORADO           0.00K                0.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
         }
       ]
     }
